--- a/about.html
+++ b/about.html
@@ -1,32 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>About – LILLEY CONSULTING & STRATEGY LIMITED</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <h1>About</h1>
-        <p>Meet the heart behind the advocacy</p>
-    </header>
-    <button class="menu-toggle" onclick="document.querySelector('nav').style.display = (document.querySelector('nav').style.display === 'block' ? 'none' : 'block')">☰ Menu</button>
-    <nav>
-        <a href="/">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="quickstart.html">Quick Start</a>
-        <a href="blog.html">Blog</a>
-        <a href="testimonials.html">Testimonials</a>
-        <a href="privacy.html">Privacy</a>
-    </nav>
-    <div class="container">
-        <p>I’m Tracy Lilley — a lived-experience advocate, strategic navigator, and independent social worker.</p>
-        <p>I bring over a decade of community support, personal system navigation, and professional training together to help people be heard — especially when services are fragmented or dismissive.</p>
-        <p>After 40+ years of masking and a late ADHD diagnosis, I’ve seen how easily people fall through the cracks. That’s why I created this space — to help others find their voice and their pathway through the noise.</p>
-    </div>
-    <footer>&copy; 2025 LILLEY CONSULTING & STRATEGY LIMITED</footer>
-</body>
-</html>
+<!DOCTYPE html><html lang='en'><head><meta charset='UTF-8'><title>about.html</title><meta name='viewport' content='width=device-width, initial-scale=1.0'><link rel='stylesheet' href='style.css'></head><body><h1>About</h1><p>Placeholder for about page content.</p></body></html>
