--- a/gallery.html
+++ b/gallery.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><html lang='en'><head><meta charset='UTF-8'><title>gallery.html</title><meta name='viewport' content='width=device-width, initial-scale=1.0'><link rel='stylesheet' href='style.css'></head><body><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -60,3 +60,4 @@
     <footer>&copy; 2025 LILLEY CONSULTING & STRATEGY LIMITED</footer>
 </body>
 </html>
+</body></html>
