--- a/testimonials.html
+++ b/testimonials.html
@@ -1,39 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Testimonials – LILLEY CONSULTING & STRATEGY LIMITED</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <h1>Testimonials</h1>
-        <p>Real Words From Those Who’ve Worked With Me</p>
-    </header>
-    <button class="menu-toggle" onclick="document.querySelector('nav').style.display = (document.querySelector('nav').style.display === 'block' ? 'none' : 'block')">☰ Menu</button>
-<nav>
-    <a href="/">Home</a>
-    <a href="about.html">About</a>
-    <a href="services.html">Services</a>
-    <a href="contact.html">Contact</a>
-    <a href="quickstart.html">Quick Start</a>
-    <a href="blog.html">Blog</a>
-    <a href="testimonials.html">Testimonials</a>
-    <a href="privacy.html">Privacy</a>
-</nav>
-    <div class="container">
-        <h3>Community Voices</h3>
-        <blockquote>“It just works.”<br><span>— Lived Experience Client</span></blockquote>
-        <blockquote>“Others began listening to me.”<br><span>— Parent Advocate</span></blockquote>
-        <blockquote>“I felt seen.”<br><span>— System Navigation Client</span></blockquote>
-
-        <h3>What Professionals Have Said</h3>
-        <blockquote>“Have you ever thought about becoming a psychiatrist?”<br><span>— Psychiatrist</span></blockquote>
-        <blockquote>“You diagnosed your husband — how do you feel?”<br><span>— Psychiatrist</span></blockquote>
-
-        <p><em>More testimonials coming soon — real stories from real people.</em></p>
-    </div>
-    <footer>&copy; 2025 LILLEY CONSULTING & STRATEGY LIMITED</footer>
-</body>
-</html>
+<!DOCTYPE html><html lang='en'><head><meta charset='UTF-8'><title>testimonials.html</title><meta name='viewport' content='width=device-width, initial-scale=1.0'><link rel='stylesheet' href='style.css'></head><body><h1>Testimonials</h1><p>“It just works.”</p></body></html>
