--- a/contact.html
+++ b/contact.html
@@ -1,35 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Contact – LILLEY CONSULTING & STRATEGY LIMITED</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <h1>Contact</h1>
-        <p>Reach out for advocacy or support</p>
-    </header>
-    <button class="menu-toggle" onclick="document.querySelector('nav').style.display = (document.querySelector('nav').style.display === 'block' ? 'none' : 'block')">☰ Menu</button>
-    <nav>
-        <a href="/">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="quickstart.html">Quick Start</a>
-        <a href="blog.html">Blog</a>
-        <a href="testimonials.html">Testimonials</a>
-        <a href="privacy.html">Privacy</a>
-    </nav>
-    <div class="container">
-        <p>You can contact me via email at:
-            <script type="text/javascript">
-                document.write('<a href="mailto:' + 'advocacy' + '@' + 'hollidaylife.com">advocacy@hollidaylife.com</a>');
-            </script>
-            <noscript>Email hidden to protect from spam.</noscript>
-        </p>
-    </div>
-    <footer>&copy; 2025 LILLEY CONSULTING & STRATEGY LIMITED</footer>
-</body>
-</html>
+<!DOCTYPE html><html lang='en'><head><meta charset='UTF-8'><title>contact.html</title><meta name='viewport' content='width=device-width, initial-scale=1.0'><link rel='stylesheet' href='style.css'></head><body><h1>Contact</h1><p>Email: <script>document.write('<a href="mailto:' + 'advocacy' + '@' + 'hollidaylife.com">advocacy@hollidaylife.com</a>');</script><noscript>Email hidden to protect from spam.</noscript></p></body></html>
