--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><html lang='en'><head><meta charset='UTF-8'><title>index.html</title><meta name='viewport' content='width=device-width, initial-scale=1.0'><link rel='stylesheet' href='style.css'></head><body><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -18,8 +18,14 @@
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
         <a href="quickstart.html">Quick Start</a>
-        <a href="blog.html">Blog</a>
-        <a href="testimonials.html">Testimonials</a>
+        <div class="dropdown">
+            <a href="#">More ▾</a>
+            <div class="dropdown-content">
+                <a href="blog.html">Blog</a>
+                <a href="testimonials.html">Testimonials</a>
+                <a href="gallery.html">Gallery</a>
+            </div>
+        </div>
         <a href="privacy.html">Privacy</a>
     </nav>
     <div class="container">
@@ -34,4 +40,4 @@
     </div>
     <footer>&copy; 2025 LILLEY CONSULTING & STRATEGY LIMITED</footer>
 </body>
-</html>
+</html></body></html>
