--- a/quickstart.html
+++ b/quickstart.html
@@ -1,57 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Quick Start – LILLEY CONSULTING & STRATEGY LIMITED</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <h1>Quick Start Guide</h1>
-        <p>How to protect yourself in services (even when you’re overwhelmed)</p>
-    </header>
-    <button class="menu-toggle" onclick="document.querySelector('nav').style.display = (document.querySelector('nav').style.display === 'block' ? 'none' : 'block')">☰ Menu</button>
-<nav>
-    <a href="/">Home</a>
-    <a href="about.html">About</a>
-    <a href="services.html">Services</a>
-    <a href="contact.html">Contact</a>
-    <a href="quickstart.html">Quick Start</a>
-    <a href="blog.html">Blog</a>
-    <a href="testimonials.html">Testimonials</a>
-    <a href="privacy.html">Privacy</a>
-</nav>
-    <div class="container">
-        <h2>You Don’t Have to Be Ready. You Just Have to Be Informed.</h2>
-        <h3>5 Things You Can Say in Any Appointment:</h3>
-        <ul>
-            <li><strong>“Can you explain what this form is for?”</strong> – Don’t sign anything without understanding it.</li>
-            <li><strong>“I’d like to receive information in writing, please.”</strong> – You have the right to process things at your own pace.</li>
-            <li><strong>“I’d like to add a note to my file that reflects my view.”</strong> – If something doesn’t sit right, it’s okay to speak up.</li>
-            <li><strong>“Can I see my own records before I give consent to share them?”</strong> – Know what they know about you.</li>
-            <li><strong>“I’m not comfortable answering that without knowing why it’s being asked.”</strong> – You can slow the process down.</li>
-        </ul>
-        <h3>Red Flags to Watch For:</h3>
-        <ul>
-            <li>“It’s just a standard form.” – But it might carry weight you weren’t told about.</li>
-            <li>“It’s easier if you just sign it now.” – Ask: easier for who?</li>
-            <li>“We can’t give you that.” – Ask for the policy in writing.</li>
-        </ul>
-        <h3>Your Personal Boundaries:</h3>
-        <ul>
-            <li>I prefer written / verbal / visual information.</li>
-            <li>Please don’t share my information without checking with me first.</li>
-            <li>I want to know about all test results, even if they’re “within range.”</li>
-            <li>I need time before making decisions.</li>
-        </ul>
-        <h3>Your Reminder:</h3>
-        <p>You don’t have to say yes to be cooperative.<br>
-        You don’t have to be grateful to be deserving.<br>
-        You don’t have to perform trauma to be taken seriously.</p>
-    </div>
-    <footer>
-        &copy; 2025 LILLEY CONSULTING & STRATEGY LIMITED
-    </footer>
-</body>
-</html>
+<!DOCTYPE html><html lang='en'><head><meta charset='UTF-8'><title>quickstart.html</title><meta name='viewport' content='width=device-width, initial-scale=1.0'><link rel='stylesheet' href='style.css'></head><body><h1>Quick Start</h1><p>Placeholder for quick start content.</p></body></html>
