--- a/about.html
+++ b/about.html
@@ -1,1 +1,101 @@
-<!DOCTYPE html><html lang='en'><head><meta charset='UTF-8'><title>about.html</title><meta name='viewport' content='width=device-width, initial-scale=1.0'><link rel='stylesheet' href='style.css'></head><body><h1>About</h1><p>Placeholder for about page content.</p></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About | Lilley Consulting & Strategy</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background-color: #f8f8f8;
+      color: #222;
+      line-height: 1.6;
+    }
+
+    header {
+      background-color: #4B0082;
+      color: white;
+      padding: 1em;
+      text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      box-shadow: 0 1px 5px rgba(0,0,0,0.1);
+    }
+
+    nav {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 1em;
+      margin-top: 0.5em;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-size: 0.9em;
+      padding: 0.4em 1em;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    main {
+      max-width: 800px;
+      margin: 2em auto;
+      padding: 1em;
+    }
+
+    h1 {
+      color: #4B0082;
+    }
+
+    blockquote {
+      font-style: italic;
+      border-left: 4px solid #6a1b9a;
+      padding-left: 1em;
+      margin: 2em 0;
+      color: #444;
+    }
+
+    footer {
+      background-color: #eee;
+      text-align: center;
+      padding: 1em;
+      font-size: 0.9em;
+      color: #666;
+      margin-top: 4em;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html">Contact</a>
+      <a href="quickstart.html">Quick Start</a>
+      <a href="privacy.html">Privacy</a>
+    </nav>
+  </header>
+
+  <main>
+    <h1>About Lilley Consulting & Strategy</h1>
+    <p>I'm Tracy Lilley — an independent social worker, strategist, and advocate. I started this consultancy with one goal: to support people navigating complex, fragmented systems that too often say, “We can’t help you.”</p>
+
+    <p>With both professional and lived experience across health, disability, education, and legal systems, I bring clarity, structure, and strategy to people’s most personal challenges. My work focuses on restoring your story with integrity and supporting you to be heard — without having to repeat yourself at every turn.</p>
+
+    <blockquote>"I built this business out of a refusal to be told 'we can’t help you.'"</blockquote>
+
+    <p>Whether you’re documenting a timeline, preparing for an agency meeting, or stuck between systems that don’t speak to each other, I work alongside you to uncover the patterns, ask the right questions, and create tools that bring your history into focus — in your own words.</p>
+
+    <p>Advocacy isn’t something I studied first. It’s something I lived. And now it’s what I do — with purpose, persistence, and proof.</p>
+  </main>
+
+  <footer>
+    &copy; 2025 LILLEY CONSULTING & STRATEGY LIMITED
