--- a/services.html
+++ b/services.html
@@ -1,1 +1,138 @@
-<!DOCTYPE html><html lang='en'><head><meta charset='UTF-8'><title>services.html</title><meta name='viewport' content='width=device-width, initial-scale=1.0'><link rel='stylesheet' href='style.css'></head><body><h1>Services</h1><p>Placeholder for services page content.</p></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Services | Lilley Consulting & Strategy</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background-color: #f8f8f8;
+      color: #222;
+      line-height: 1.6;
+    }
+
+    header {
+      background-color: #4B0082;
+      color: white;
+      padding: 1em;
+      text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      box-shadow: 0 1px 5px rgba(0,0,0,0.1);
+    }
+
+    nav {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 1em;
+      margin-top: 0.5em;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-size: 0.9em;
+      padding: 0.4em 1em;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    main {
+      max-width: 900px;
+      margin: 2em auto;
+      padding: 1em;
+    }
+
+    h1 {
+      color: #4B0082;
+    }
+
+    .section {
+      background: #fff;
+      padding: 1.5em;
+      margin-bottom: 2em;
+      border-left: 5px solid #6a1b9a;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.05);
+    }
+
+    .section h2 {
+      margin-top: 0;
+      color: #4B0082;
+    }
+
+    .buy-button {
+      display: inline-block;
+      margin-top: 1em;
+      background-color: #4B0082;
+      color: white;
+      padding: 0.6em 1.2em;
+      text-decoration: none;
+      border-radius: 4px;
+      font-weight: bold;
+    }
+
+    .buy-button:hover {
+      background-color: #5f21a6;
+    }
+
+    footer {
+      background-color: #eee;
+      text-align: center;
+      padding: 1em;
+      font-size: 0.9em;
+      color: #666;
+      margin-top: 4em;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html">Contact</a>
+      <a href="quickstart.html">Quick Start</a>
+      <a href="privacy.html">Privacy</a>
+    </nav>
+  </header>
+
+  <main>
+    <h1>Services</h1>
+
+    <div class="section">
+      <h2>Advocacy Support</h2>
+      <p>I work directly with individuals and families to navigate health, disability, education, and legal systems. Whether you need help preparing for a meeting, documenting your story, or challenging a decision — I provide grounded, strategic support informed by real-world experience.</p>
+    </div>
+
+    <div class="section">
+      <h2>Consulting & Strategic Insight</h2>
+      <p>For organisations, professionals, and advocates seeking to improve how they engage with complexity, trauma, and system fatigue. I offer tailored consulting that bridges professional frameworks with lived reality — and helps you listen better, act smarter, and build trust.</p>
+    </div>
+
+    <div class="section">
+      <h2>Resources & Toolkits</h2>
+      <p>I’m currently developing downloadable toolkits, guides, and recorded workshops based on the methods and strategies I’ve used with clients. These will help others manage documentation, advocacy, and emotional burnout more independently.</p>
+      <a href="#" class="buy-button">Coming Soon</a>
+    </div>
+
+    <div class="section">
+      <h2>Memoir: <em>The Full Circle</em></h2>
+      <p>A personal account of system failure, motherhood, and the long road to recognition. This survivor-led memoir is designed to validate, expose, and document a journey that too many share but few get to tell. Available for pre-order soon.</p>
+      <a href="#" class="buy-button">Pre-Order Coming Soon</a>
+    </div>
+  </main>
+
+  <footer>
+    &copy; 2025 LILLEY CONSULTING & STRATEGY LIMITED
+  </footer>
+
+</body>
+</html>
