--- a/index.html
+++ b/index.html
@@ -1,43 +1,142 @@
-<!DOCTYPE html><html lang='en'><head><meta charset='UTF-8'><title>index.html</title><meta name='viewport' content='width=device-width, initial-scale=1.0'><link rel='stylesheet' href='style.css'></head><body><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Home – LILLEY CONSULTING & STRATEGY LIMITED</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Home | Lilley Consulting & Strategy</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background-color: #f8f8f8;
+      color: #222;
+      line-height: 1.6;
+    }
+
+    header {
+      background-color: #4B0082;
+      color: white;
+      padding: 1em;
+      text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      box-shadow: 0 1px 5px rgba(0,0,0,0.1);
+    }
+
+    nav {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 1em;
+      margin-top: 0.5em;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-size: 0.9em;
+      padding: 0.4em 1em;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    .hero {
+      background: linear-gradient(to right, #4B0082, #6a1b9a);
+      color: white;
+      padding: 4em 1em;
+      text-align: center;
+    }
+
+    .hero h1 {
+      font-size: 2.5em;
+      margin-bottom: 0.4em;
+    }
+
+    .hero p {
+      font-size: 1.2em;
+      max-width: 700px;
+      margin: 0 auto;
+    }
+
+    main {
+      max-width: 1000px;
+      margin: 2em auto;
+      padding: 0 1em;
+    }
+
+    .columns {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      gap: 1.5em;
+      margin-top: 2em;
+    }
+
+    .column {
+      background: #fff;
+      flex: 1;
+      min-width: 250px;
+      padding: 1.5em;
+      border-left: 5px solid #6a1b9a;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.05);
+    }
+
+    .column h3 {
+      margin-top: 0;
+      color: #4B0082;
+    }
+
+    footer {
+      background-color: #eee;
+      text-align: center;
+      padding: 1em;
+      font-size: 0.9em;
+      color: #666;
+      margin-top: 4em;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>LILLEY CONSULTING & STRATEGY LIMITED</h1>
-        <p>Clarity, Strategy & Lived Experience</p>
-    </header>
-    <button class="menu-toggle" onclick="document.querySelector('nav').style.display = (document.querySelector('nav').style.display === 'block' ? 'none' : 'block')">☰ Menu</button>
+
+  <header>
     <nav>
-        <a href="/">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="quickstart.html">Quick Start</a>
-        <div class="dropdown">
-            <a href="#">More ▾</a>
-            <div class="dropdown-content">
-                <a href="blog.html">Blog</a>
-                <a href="testimonials.html">Testimonials</a>
-                <a href="gallery.html">Gallery</a>
-            </div>
-        </div>
-        <a href="privacy.html">Privacy</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html">Contact</a>
+      <a href="quickstart.html">Quick Start</a>
+      <a href="privacy.html">Privacy</a>
     </nav>
-    <div class="container">
-        <h2>Welcome to LILLEY CONSULTING & STRATEGY LIMITED</h2>
-        <p>I’m the gap between services and organisations — the part that isn’t funded, but is absolutely essential.</p>
-        <p>Navigating complex systems takes energy, clarity, and spoons (if you know, you know). Most people don’t have those to spare — especially not every day.</p>
-        <p>That’s where I come in.</p>
-        <p>I walk beside you. I help you make sense of systems, set goals that actually fit your life, and get clearer about what’s needed — not just what’s expected.</p>
-        <p>You were already resilient. This is about adding strategy, language, and strength to the resilience you already carry.</p>
-        <p>Whether it’s accessing support, being heard, or just not having to explain yourself again — you don’t have to do it alone.</p>
-        <p><strong>Let’s start the next step together.</strong></p>
+  </header>
+
+  <div class="hero">
+    <h1>Clarity, Strategy, and Truth</h1>
+    <p>For people and families navigating systems that were never built to hear them. This is where advocacy meets action — and change begins.</p>
+  </div>
+
+  <main>
+    <div class="columns">
+      <div class="column">
+        <h3>Advocacy</h3>
+        <p>Get support navigating broken systems, preparing documentation, and being taken seriously — without repeating your whole story each time.</p>
+      </div>
+      <div class="column">
+        <h3>Toolkits</h3>
+        <p>Workbooks, guides, and structured templates to simplify communication and give you lasting control of your own narrative.</p>
+      </div>
+      <div class="column">
+        <h3>Consulting</h3>
+        <p>Professional insight drawn from real experience. Helping services, systems, and people work more effectively across complexity and trauma.</p>
+      </div>
     </div>
-    <footer>&copy; 2025 LILLEY CONSULTING & STRATEGY LIMITED</footer>
+  </main>
+
+  <footer>
+    &copy; 2025 LILLEY CONSULTING & STRATEGY LIMITED
+  </footer>
+
 </body>
-</html></body></html>
+</html>
