--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,107 @@
-<!DOCTYPE html><html lang='en'><head><meta charset='UTF-8'><title>privacy.html</title><meta name='viewport' content='width=device-width, initial-scale=1.0'><link rel='stylesheet' href='style.css'></head><body><h1>Privacy Policy</h1><p>Your data is respected here.</p></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Privacy & Disclaimer | Lilley Consulting & Strategy</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background-color: #f8f8f8;
+      color: #222;
+      line-height: 1.6;
+    }
+
+    header {
+      background-color: #4B0082;
+      color: white;
+      padding: 1em;
+      text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      box-shadow: 0 1px 5px rgba(0,0,0,0.1);
+    }
+
+    nav {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 1em;
+      margin-top: 0.5em;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-size: 0.9em;
+      padding: 0.4em 1em;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    main {
+      max-width: 800px;
+      margin: 2em auto;
+      padding: 1em;
+    }
+
+    h1 {
+      color: #4B0082;
+    }
+
+    h2 {
+      margin-top: 2em;
+      color: #6a1b9a;
+    }
+
+    footer {
+      background-color: #eee;
+      text-align: center;
+      padding: 1em;
+      font-size: 0.9em;
+      color: #666;
+      margin-top: 4em;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html">Contact</a>
+      <a href="quickstart.html">Quick Start</a>
+      <a href="privacy.html">Privacy</a>
+    </nav>
+  </header>
+
+  <main>
+    <h1>Privacy & Disclaimer</h1>
+
+    <h2>Privacy Policy</h2>
+    <p>This website is operated by Lilley Consulting & Strategy Ltd. I respect your privacy and will only collect personal information (such as your email address or message content) if you voluntarily submit it through a contact form or email.</p>
+
+    <p>Any information you share is used only to respond to your inquiry or provide services you’ve requested. Your information is never sold, rented, or shared with third parties without your consent.</p>
+
+    <p>Like many websites, I may use basic analytics tools (e.g., visitor counts or device types) to understand how people use the site. No identifying information is collected from these tools.</p>
+
+    <h2>Disclaimer</h2>
+    <p>All information shared on this website is for general informational and advocacy purposes only. I do not provide legal, medical, psychological, or financial advice. Any actions taken based on this content are at your own discretion.</p>
+
+    <p>While I bring lived and professional experience to my work, I am not acting in the capacity of a licensed medical provider, lawyer, or financial advisor. If you need support in those areas, I encourage you to seek qualified professionals.</p>
+
+    <p>This website is designed to empower and inform — not to replace formal advice or treatment.</p>
+  </main>
+
+  <footer>
+    &copy; 2025 LILLEY CONSULTING & STRATEGY LIMITED
+  </footer>
+
+</body>
+</html>
